# django-fk-constraint

./: pyproject.toml
tests/: models.py  settings.py
