[tool.poetry]
name = "fk-constraint"
version = "0.1.0"
description = ""
authors = ["Simon Charette <charette.s@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fk_constraint"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
tox = "^4.26.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
